--- a/styles/components/_modalEmailCadastrado.scss
+++ b/styles/components/_modalEmailCadastrado.scss
@@ -6,6 +6,8 @@
     width: 350px;
     position: fixed;
     top: 50vh;
+    left: 50%;
+    transform: translateX(-50%);
 
     .header__email__cadastrado {
         display: flex;
