--- a/styles/components/_modalProdutos.scss
+++ b/styles/components/_modalProdutos.scss
@@ -3,6 +3,7 @@
     justify-self: center;
     width: 30px;
     margin-bottom: 0.5em;
+    opacity: 0;
 }
 
 @mixin estiloSeletorTamanho() {
@@ -10,17 +11,44 @@
     justify-self: left;
     width: 15px;
     margin: 0;
+    opacity: 0;
+}
+
+@mixin inputRadioCor() {
+    content: "";
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 3px solid #DEE2E6;
+    background: #F3F6F7;
+    position: absolute;
+    top: 0;
+    cursor: pointer;
+}
+
+@mixin inputRadioTamanho() {
+    content: "";
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    border: 3px solid #DEE2E6;
+    background: #F3F6F7;
+    position: absolute;
+    top: 0;
+    cursor: pointer;
 }
 
 .container__modal--produtos {
     display: none;
+    width: 345px;
     box-shadow: 2px 2px 10px 3px $cinza-claro;
     background: $branco;
     padding-bottom: 1.5em;
     position: fixed;
     height: 100%;
     top: 0;
-    //left: 5px;
+    left: 50%;
+    transform: translateX(-50%);
     overflow-y: auto;
 
     .modal__header {
@@ -48,7 +76,7 @@
         .icon__fechar {
             margin-right: 1em;
             cursor: pointer;
-            
+
             img {
                 max-width: 16px;
                 max-height: 16px;
@@ -70,9 +98,8 @@
 
     .modal__informacoes {
         display: grid;
-        //grid-template-rows: 3/5;
         border: 1px solid rgba($color: $cinza-claro, $alpha: 15%);
-        width: 90%;
+        width: 310px;
         margin: 0 auto;
 
         .detalhe__produto {
@@ -118,8 +145,9 @@
 
             .escolher__cor--item {
                 display: grid;
-                width: 50vw;
+                width: 180px;
                 gap: 0.5em;
+                position: relative;
 
                 #azul-claro {
                     @include estiloSeletorCor;
@@ -139,6 +167,40 @@
                     text-align: center;
                     padding-bottom: 1em;
                 }
+
+                label[for="azul-claro"] {
+                    &::before {
+                        @include inputRadioCor;
+                        left: 27px;
+                    }
+                }
+
+                label[for="offwhite"] {
+                    &::before {
+                        @include inputRadioCor;
+                        left: 60%;
+                    }
+                }
+
+                label[for="preto"] {
+                    &::before {
+                        @include inputRadioCor;
+                        left: 106%;
+                    }
+                }
+
+                input[id="azul-claro"]:checked+label::before {
+                    background: #75D7F0;
+                }
+
+                input[id="offwhite"]:checked+label::before {
+                    background: #F3F6F7;
+                    border: 3px solid black;
+                }
+
+                input[id="preto"]:checked+label::before {
+                    background: black;
+                }
             }
         }
 
@@ -156,8 +218,9 @@
             .escolher__tamanho--item {
                 display: grid;
                 grid-template-columns: repeat(5, auto);
-                width: 50vw;
+                width: 180px;
                 gap: 0.5em;
+                position: relative;
 
                 #p {
                     @include estiloSeletorTamanho;
@@ -180,8 +243,50 @@
                 }
 
                 label {
-                    width: 30px;
+                    width: 25px;
                     text-align: left;
+                    padding-top: 0.5em;
+                    padding-left: 0.3em;
+                }
+
+                label[for="p"] {
+                    &::before {
+                        @include inputRadioTamanho;
+                        left: 0;
+                    }
+                }
+
+                label[for="pp"] {
+                    &::before {
+                        @include inputRadioTamanho;
+                        left: 24%;
+                    }
+                }
+
+                label[for="m"] {
+                    &::before {
+                        @include inputRadioTamanho;
+                        left: 43%;
+                    }
+                }
+
+                label[for="g"] {
+                    &::before {
+                        @include inputRadioTamanho;
+                        left: 64%;
+                    }
+                }
+
+                label[for="gg"] {
+                    &::before {
+                        @include inputRadioTamanho;
+                        left: 88%;
+                    }
+                }
+
+                input[name="tamanho"]:checked+label::before {
+                    background: white;
+                    border: 3px solid $cor-botao;
                 }
             }
 
@@ -190,6 +295,15 @@
                 width: 180px;
                 height: 40px;
                 color: $branco;
+                cursor: pointer;
+                transition: 0.5s;
+
+                &:hover {
+                    border: 1px solid $cor-botao;
+                    background: $branco;
+                    color: $cor-botao;
+                    transition: 0.5s;
+                }
             }
         }
     }
