--- a/styles/components/_responsivo.scss
+++ b/styles/components/_responsivo.scss
@@ -27,6 +27,11 @@
                         border-bottom: none;
                         white-space: nowrap;
 
+                        &:hover {
+                            color: $verde-menu-humburger;
+                            border-bottom: 1px solid $verde-menu-humburger;
+                        }
+
                         .fecharMenu {
                             display: none;
                         }
@@ -69,7 +74,7 @@
                 .img__itens {
                     display: grid;
                     grid-template-columns: 0.5fr 0.5fr;
-                    height: 35vh;
+                    height: 40vh;
 
                     .mobile {
                         display: none;
@@ -77,7 +82,7 @@
 
                     .tablet--banner {
                         display: block;
-                        height: 40vh;
+                        height: 45vh;
                     }
 
                     //banner laranja_______________________
@@ -181,10 +186,11 @@
         display: none;
         grid-column: 1/3;
         grid-template-columns: repeat(2, 1fr);
-        width: 70vw;
-        left: 150px;
-        top: 20px;
-        height: auto;
+        width: 700px;
+        left: 50%;
+        top: 5%;
+        height: 620px;
+        overflow: unset;
 
         .modal__header {
             display: flex;
@@ -198,13 +204,14 @@
         }
 
         img {
-            width: 30vw;
-            height: 40vh;
+            width: 90%;
+            height: 420px;
         }
 
         .modal__informacoes {
             grid-column: 2/3;
-            width: 28vw;
+            width: 280px;
+            height: 475px;
             border: none;
 
             img {
@@ -212,22 +219,46 @@
             }
 
             .detalhe__produto {
-                width: 25vw;
+                width: 250px;
             }
 
-            .escolher__cor {
-                width: 25vw;
-
-                .escolher__cor--item {
-                    width: 25vw;
-                }
-            }
+            
 
             .escolher__tamanho {
-                width: 25vw;
+                width: 250px;
 
                 .escolher__tamanho--item {
-                    width: 15vw;
+                    width: 150px;
+
+                    label[for="p"] {
+                        &::before {
+                            left: 0;
+                        }
+                    }
+    
+                    label[for="pp"] {
+                        &::before {
+                            left: 28%;
+                        }
+                    }
+    
+                    label[for="m"] {
+                        &::before {
+                            left: 52%;
+                        }
+                    }
+    
+                    label[for="g"] {
+                        &::before {
+                            left: 77%;
+                        }
+                    }
+    
+                    label[for="gg"] {
+                        &::before {
+                            left: 105%;
+                        }
+                    }
                 }
 
                 .botao__add--sacola {
@@ -408,44 +439,19 @@
         display: none;
         grid-column: 1/3;
         grid-template-columns: repeat(2, 1fr);
-        left: 180px;
+        left: 50%;
 
         .modal__header {
             grid-column: 1/3;
         }
 
-        img {
-            width: 25vw;
-            height: 40vh;
-        }
-
         .modal__informacoes {
             grid-column: 2/3;
-            width: 28vw;
+            //width: 28vw;
             border: none;
 
             img {
                 display: none;
-            }
-
-            .detalhe__produto {
-                width: 25vw;
-            }
-
-            .escolher__cor {
-                width: 25vw;
-
-                .escolher__cor--item {
-                    width: 25vw;
-                }
-            }
-
-            .escolher__tamanho {
-                width: 25vw;
-
-                .escolher__tamanho--item {
-                    width: 15vw;
-                }
             }
         }
     }
