--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@ html, body {
   height: 220px;
   width: 150px;
   transition: 0.5s ease-in-out;
+  z-index: 1;
 }
 .container__header .cabecalho .container__navBar .navBar {
   display: flex;
@@ -106,7 +107,7 @@ html, body {
   display: flex;
   justify-content: space-between;
   overflow: hidden;
-  width: 100vw;
+  width: 100%;
   position: relative;
 }
 .container__header .container__banner .container__img {
@@ -208,6 +209,7 @@ html, body {
 .container__categoria .categoria__item {
   display: flex;
   flex-direction: column;
+  cursor: pointer;
 }
 .container__categoria .categoria__item .categoria__nome {
   color: white;
@@ -215,6 +217,9 @@ html, body {
   font-weight: 500;
   padding: 0.4em 0;
   text-align: center;
+}
+.container__categoria .categoria__item:hover {
+  box-shadow: -3px 3px 15px 5px lightskyblue;
 }
 .container__categoria .img__tablet {
   display: none;
@@ -364,12 +369,15 @@ html, body {
 
 .container__modal--produtos {
   display: none;
+  width: 345px;
   box-shadow: 2px 2px 10px 3px #6C757D;
   background: white;
   padding-bottom: 1.5em;
   position: fixed;
   height: 100%;
   top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   overflow-y: auto;
 }
 .container__modal--produtos .modal__header {
@@ -413,7 +421,7 @@ html, body {
 .container__modal--produtos .modal__informacoes {
   display: grid;
   border: 1px solid rgba(108, 117, 125, 0.15);
-  width: 90%;
+  width: 310px;
   margin: 0 auto;
 }
 .container__modal--produtos .modal__informacoes .detalhe__produto {
@@ -453,32 +461,82 @@ html, body {
 }
 .container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item {
   display: grid;
-  width: 50vw;
+  width: 180px;
   gap: 0.5em;
+  position: relative;
 }
 .container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item #azul-claro {
   grid-row: 1/2;
   justify-self: center;
   width: 30px;
   margin-bottom: 0.5em;
+  opacity: 0;
 }
 .container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item #offwhite {
   grid-row: 1/2;
   justify-self: center;
   width: 30px;
   margin-bottom: 0.5em;
+  opacity: 0;
 }
 .container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item #preto {
   grid-row: 1/2;
   justify-self: center;
   width: 30px;
   margin-bottom: 0.5em;
+  opacity: 0;
 }
 .container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item label {
   justify-self: center;
   width: 75px;
   text-align: center;
   padding-bottom: 1em;
+}
+.container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item label[for=azul-claro]::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 3px solid #DEE2E6;
+  background: #F3F6F7;
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  left: 27px;
+}
+.container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item label[for=offwhite]::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 3px solid #DEE2E6;
+  background: #F3F6F7;
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  left: 60%;
+}
+.container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item label[for=preto]::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 3px solid #DEE2E6;
+  background: #F3F6F7;
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  left: 106%;
+}
+.container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item input[id=azul-claro]:checked + label::before {
+  background: #75D7F0;
+}
+.container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item input[id=offwhite]:checked + label::before {
+  background: #F3F6F7;
+  border: 3px solid black;
+}
+.container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item input[id=preto]:checked + label::before {
+  background: black;
 }
 .container__modal--produtos .modal__informacoes .escolher__tamanho {
   display: flex;
@@ -493,48 +551,128 @@ html, body {
 .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item {
   display: grid;
   grid-template-columns: repeat(5, auto);
-  width: 50vw;
+  width: 180px;
   gap: 0.5em;
+  position: relative;
 }
 .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item #p {
   grid-row: 1/2;
   justify-self: left;
   width: 15px;
   margin: 0;
+  opacity: 0;
 }
 .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item #pp {
   grid-row: 1/2;
   justify-self: left;
   width: 15px;
   margin: 0;
+  opacity: 0;
 }
 .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item #m {
   grid-row: 1/2;
   justify-self: left;
   width: 15px;
   margin: 0;
+  opacity: 0;
 }
 .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item #g {
   grid-row: 1/2;
   justify-self: left;
   width: 15px;
   margin: 0;
+  opacity: 0;
 }
 .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item #gg {
   grid-row: 1/2;
   justify-self: left;
   width: 15px;
   margin: 0;
+  opacity: 0;
 }
 .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item label {
-  width: 30px;
+  width: 25px;
   text-align: left;
+  padding-top: 0.5em;
+  padding-left: 0.3em;
+}
+.container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item label[for=p]::before {
+  content: "";
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  border: 3px solid #DEE2E6;
+  background: #F3F6F7;
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  left: 0;
+}
+.container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item label[for=pp]::before {
+  content: "";
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  border: 3px solid #DEE2E6;
+  background: #F3F6F7;
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  left: 24%;
+}
+.container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item label[for=m]::before {
+  content: "";
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  border: 3px solid #DEE2E6;
+  background: #F3F6F7;
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  left: 43%;
+}
+.container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item label[for=g]::before {
+  content: "";
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  border: 3px solid #DEE2E6;
+  background: #F3F6F7;
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  left: 64%;
+}
+.container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item label[for=gg]::before {
+  content: "";
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  border: 3px solid #DEE2E6;
+  background: #F3F6F7;
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  left: 88%;
+}
+.container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item input[name=tamanho]:checked + label::before {
+  background: white;
+  border: 3px solid #9353FF;
 }
 .container__modal--produtos .modal__informacoes .escolher__tamanho .botao__add--sacola {
   background: #9353FF;
   width: 180px;
   height: 40px;
   color: white;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.container__modal--produtos .modal__informacoes .escolher__tamanho .botao__add--sacola:hover {
+  border: 1px solid #9353FF;
+  background: white;
+  color: #9353FF;
+  transition: 0.5s;
 }
 
 .modal__email__cadastrado {
@@ -545,6 +683,8 @@ html, body {
   width: 350px;
   position: fixed;
   top: 50vh;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .modal__email__cadastrado .header__email__cadastrado {
   display: flex;
@@ -604,6 +744,10 @@ html, body {
     border-bottom: none;
     white-space: nowrap;
   }
+  .container__header .cabecalho .container__navBar .navBar li:hover {
+    color: #DAFF01;
+    border-bottom: 1px solid #DAFF01;
+  }
   .container__header .cabecalho .container__navBar .navBar li .fecharMenu {
     display: none;
   }
@@ -636,14 +780,14 @@ html, body {
   .container__header .container__banner .container__img .img__itens {
     display: grid;
     grid-template-columns: 0.5fr 0.5fr;
-    height: 35vh;
+    height: 40vh;
   }
   .container__header .container__banner .container__img .img__itens .mobile {
     display: none;
   }
   .container__header .container__banner .container__img .img__itens .tablet--banner {
     display: block;
-    height: 40vh;
+    height: 45vh;
   }
   .container__header .container__banner .container__img .img__itens .img__banner__laranja--responsivo {
     width: 50vw;
@@ -713,10 +857,11 @@ html, body {
     display: none;
     grid-column: 1/3;
     grid-template-columns: repeat(2, 1fr);
-    width: 70vw;
-    left: 150px;
-    top: 20px;
-    height: auto;
+    width: 700px;
+    left: 50%;
+    top: 5%;
+    height: 620px;
+    overflow: unset;
   }
   .container__modal--produtos .modal__header {
     display: flex;
@@ -728,31 +873,41 @@ html, body {
     padding-right: 5em;
   }
   .container__modal--produtos img {
-    width: 30vw;
-    height: 40vh;
+    width: 90%;
+    height: 420px;
   }
   .container__modal--produtos .modal__informacoes {
     grid-column: 2/3;
-    width: 28vw;
+    width: 280px;
+    height: 475px;
     border: none;
   }
   .container__modal--produtos .modal__informacoes img {
     display: none;
   }
   .container__modal--produtos .modal__informacoes .detalhe__produto {
-    width: 25vw;
-  }
-  .container__modal--produtos .modal__informacoes .escolher__cor {
-    width: 25vw;
-  }
-  .container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item {
-    width: 25vw;
+    width: 250px;
   }
   .container__modal--produtos .modal__informacoes .escolher__tamanho {
-    width: 25vw;
+    width: 250px;
   }
   .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item {
-    width: 15vw;
+    width: 150px;
+  }
+  .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item label[for=p]::before {
+    left: 0;
+  }
+  .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item label[for=pp]::before {
+    left: 28%;
+  }
+  .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item label[for=m]::before {
+    left: 52%;
+  }
+  .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item label[for=g]::before {
+    left: 77%;
+  }
+  .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item label[for=gg]::before {
+    left: 105%;
   }
   .container__modal--produtos .modal__informacoes .escolher__tamanho .botao__add--sacola {
     margin-bottom: 2em;
@@ -853,37 +1008,17 @@ html, body {
     display: none;
     grid-column: 1/3;
     grid-template-columns: repeat(2, 1fr);
-    left: 180px;
+    left: 50%;
   }
   .container__modal--produtos .modal__header {
     grid-column: 1/3;
   }
-  .container__modal--produtos img {
-    width: 25vw;
-    height: 40vh;
-  }
   .container__modal--produtos .modal__informacoes {
     grid-column: 2/3;
-    width: 28vw;
     border: none;
   }
   .container__modal--produtos .modal__informacoes img {
     display: none;
-  }
-  .container__modal--produtos .modal__informacoes .detalhe__produto {
-    width: 25vw;
-  }
-  .container__modal--produtos .modal__informacoes .escolher__cor {
-    width: 25vw;
-  }
-  .container__modal--produtos .modal__informacoes .escolher__cor .escolher__cor--item {
-    width: 25vw;
-  }
-  .container__modal--produtos .modal__informacoes .escolher__tamanho {
-    width: 25vw;
-  }
-  .container__modal--produtos .modal__informacoes .escolher__tamanho .escolher__tamanho--item {
-    width: 15vw;
   }
   .container__facilidades {
     display: grid;
