update do projeto

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,4 +8,5 @@
 @import "./components/rodape";
 @import "./components/modalProdutos";
 @import "./components/modalEmailCadastrado";
+@import "./components/emBreve";
 @import "./components/responsivo";
