--- a/styles/style.css
+++ b/styles/style.css
@@ -356,6 +356,7 @@ html, body {
 
 .rodape {
   background: black;
+  width: 100%;
 }
 .rodape .rodape__texto {
   margin: 0 auto;
@@ -716,6 +717,21 @@ html, body {
 }
 .modal__email__cadastrado span {
   padding: 1em 1em 2.5em 1em;
+}
+
+.container__emBreve {
+  height: 100vh;
+}
+.container__emBreve h1 {
+  font-size: 4rem;
+  font-weight: 500;
+  text-align: center;
+  padding: 0.5em 0;
+}
+.container__emBreve img {
+  display: block;
+  width: 330px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 768px) {
